--- a/estilos/style.css
+++ b/estilos/style.css
@@ -203,11 +203,12 @@ ul li{
 
 .titulo{
     color: #efefef;
-    margin-top: 360px;
+    margin-top: 270px;
     font-size: 60px;
     font-family: 'Plus Jakarta Sans', sans-serif;
-    margin-bottom: 295px;
+    margin-bottom: 50px;
 }
+
 
 /* TURNOS */
 
@@ -239,3 +240,64 @@ ul li{
     margin: 20px;
 
 }
+
+.modifContenido h6 {
+  margin-bottom: 30px;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-size: 1.4rem;
+  color: #efefef; }
+
+.modifContenido label {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  color: #cecece;}
+  
+
+.modifCalendario {
+  flex-direction: column; }
+
+#btnCalend {
+  margin-top: 10px; }
+
+/* ESTILOS PARA EL MAPA EN LA PESTAÑA CONTACOS */
+.modifMapa {
+  margin: 60px 0 60px 0; }
+
+  .tituloPrincipal h6 {
+    margin: 300px 0 60px 0;
+    color: #efefef;
+    text-align: center;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-size: 3rem; }
+
+
+    .tith6 {
+      margin-bottom: 30px;
+      font-family: 'Plus Jakarta Sans', sans-serif;
+      font-size: 1.4rem; }
+    
+    .containerDet {
+      width: 230px;
+      border: 5px solid #f591e8;
+      border-radius: 10px; }
+      .containerDet .divDetalle {
+        font-family: 'Plus Jakarta Sans', sans-serif;
+        color: #cecece;
+        font-size: 1.2rem;
+        border-bottom: 2px solid #f591e8;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; }
+        .containerDet .divDetalle h6 {
+          
+          margin-top: 1rem;
+          font-size: 1.2rem; }
+    
+    .formReserva label {
+      font-family: 'Plus Jakarta Sans', sans-serif;
+      color: #cecece;
+    }
+    
+    .divPrincipalReserva {
+      color: #cecece;
+      margin-bottom: 60px; }
