--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,303 +1,270 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Oswald&family=Plus+Jakarta+Sans:wght@300&family=Ubuntu&family=Ubuntu+Condensed&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Nunito:ital,wght@1,200&family=Oswald&family=Plus+Jakarta+Sans:wght@300&family=Ubuntu&family=Ubuntu+Condensed&display=swap');
+
 * {
-    margin: 0;
-    padding: 0;
-    transition: 0.5s;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  transition: 0.5s;
+  box-sizing: border-box;
 }
 
 header {
-    background-color: #121213;
-    padding: 10px 0;
-    position: fixed;
-    border-bottom: 8px solid #efefef;
-    z-index: 1;
-    right: 0;
-    top: 0;
-    left: 0;
+  background-color: #121213;
+  padding: 10px 0;
+  position: fixed;
+  border-bottom: 8px solid #efefef;
+  z-index: 1;
+  right: 0;
+  top: 0;
+  left: 0;
 }
 
-body{
-    background-color: #121213;
-    margin: 0;
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+body {
+  background-color: #121213;
+  margin: 0;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 
 footer {
-    width: 100%;
-    position: relative;
-    bottom: 0;
-    left: 0;
-    padding: 2rem 8%;
-    background-color: #121213;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-top: 8px solid #efefef;
+  width: 100%;
+  position: relative;
+  bottom: 0;
+  left: 0;
+  padding: 2rem 8%;
+  background-color: #121213;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-top: 8px solid #efefef;
 
 }
 
-.redes{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-bottom: 1rem;
-    box-sizing: border-box;
+.redes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 1rem;
+  box-sizing: border-box;
 }
 
 .red {
-    height: 50px;
-    width: 50px;
-    border-radius: 50px;
-    border: 1px solid #f2f2f2;
-    background-image: url(../imagenes/instragram.png);
-    background-position: center;
-    background-size: 40%;
-    background-repeat: no-repeat;
-    margin: 1rem;
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
+  border: 1px solid #f2f2f2;
+  background-image: url(../imagenes/instragram.png);
+  background-position: center;
+  background-size: 40%;
+  background-repeat: no-repeat;
+  margin: 1rem;
 }
 
 .red:hover {
-    background-color: #121212;
-    filter: invert(1);
-    transition: 0.5s;
+  background-color: #121212;
+  filter: invert(1);
+  transition: 0.5s;
 }
 
 .red:nth-of-type(2) {
-    background-image: url(../imagenes/facebook.png);
+  background-image: url(../imagenes/facebook.png);
 }
 
 .red:nth-of-type(3) {
-    background-image: url(../imagenes/twitter.png);
+  background-image: url(../imagenes/twitter.png);
 }
 
 .red:nth-of-type(4) {
-    background-image: url(../imagenes/gmail2.png);
+  background-image: url(../imagenes/gmail2.png);
 }
 
-.copyright{
-    color: #f2f2f2;
-    opacity: 0.3;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+.copyright {
+  color: #f2f2f2;
+  opacity: 0.3;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-/* 
-.linea2{
-    width: 100%;
-    height: 7px;
-    background-color: #efefef;
-    margin: 20px;
-    /* margin-bottom: 340px; 
-} */
-
 
 .logo {
-    width: 190px;
-    height: 180px;
+  width: 190px;
+  height: 180px;
 }
 
 nav {
-    list-style: none;
-    text-decoration: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 20px;
+  list-style: none;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
 }
 
 nav li {
 
-    display: inline-block;
+  display: inline-block;
 }
 
-/* li a {
-     text-decoration: none;
-    list-style: none;
-    font-size: 20px;
-    display: block;
-    padding: 0.5rem 2rem;
-    margin-right: 20px;
-    transition: all 0.5s linear;
-    color: #efefef;
-    font-family: 'Plus Jakarta Sans', sans-serif;
-} */
-
-ul li{
-    padding: 20px;
+ul li {
+  padding: 20px;
 }
+
 .line {
-    position: relative;
-    display: block;
-    text-transform: uppercase;
-    color: #ffffff;
-    text-decoration: none;
-    text-align: center;
-    font-size: 28px;
-    cursor: pointer;
-    width: fit-content;
-    /* margin: 0 auto 48px; */
-    /* z-index: 0; */
-    transition: all 450ms ease;
-    font-family: 'Plus Jakarta Sans', sans-serif;
-  }
-  .line::after, .line::before {
-    content: "";
-    display: block;
-    position: absolute;
-    transition: width 540ms, opacity 300ms ease;
-  }
-  
-  .line::before, .line::after {
-    height: 0.1em;
-    bottom: -1px;
-  }
-  .line::before {
+  position: relative;
+  display: block;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-decoration: none;
+  text-align: center;
+  font-size: 28px;
+  cursor: pointer;
+  width: fit-content;
+  transition: all 450ms ease;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+}
+
+.line::after,
+.line::before {
+  content: "";
+  display: block;
+  position: absolute;
+  transition: width 540ms, opacity 300ms ease;
+}
+
+.line::before,
+.line::after {
+  height: 0.1em;
+  bottom: -1px;
+}
+
+.line::before {
+  width: 0;
+  background-color: #f591e8;
+}
+
+.line::after {
+  width: 100%;
+  border: 1px solid #f591e8;
+  border-top: 0;
+  opacity: 0;
+}
+
+.line:hover {
+  color: #f591e8;
+}
+
+.line:hover::before {
+  width: 0;
+  animation: width 1500ms ease forwards;
+}
+
+.line:hover::after {
+  opacity: 1;
+}
+
+@keyframes width {
+  0% {
     width: 0;
-    background-color: #f591e8;
   }
-  .line::after {
+
+  50% {
     width: 100%;
-    border: 1px solid #f591e8;
-    border-top: 0;
-    opacity: 0;
-  }
-  .line:hover {
-    color: #f591e8;
-  }
-  .line:hover::before {
-    width: 0;
-    animation: width 1500ms ease forwards;
-  }
-  .line:hover::after {
-    opacity: 1;
-  }
-  
-  @keyframes width {
-    0% {
-      width: 0;
-    }
-    50% {
-      width: 100%;
-    }
-    100% {
-      width: 70%;
-    }
   }
 
-
-/* .linea{
-    width: 100%;
-    height: 7px;
-    background-color: #efefef;
-    margin-top: 245px;
-} */
-
-.titulo{
-    color: #efefef;
-    margin-top: 270px;
-    font-size: 60px;
-    font-family: 'Plus Jakarta Sans', sans-serif;
-    margin-bottom: 50px;
+  100% {
+    width: 70%;
+  }
 }
 
+.titulo {
+  color: #efefef;
+  margin-top: 270px;
+  font-size: 60px;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  margin-bottom: 50px;
+}
 
-/* TURNOS */
-
-#reservas{
-    color: #efefef;
-    font-family: 'Nunito', sans-serif;
-    margin-top: 300px;
-    margin-bottom:30px;
-}
-#form{
-    margin-top: 40px;
-    margin-bottom: 100px;
-    /* background-color: #f85ce851; */
-    border: 7px solid white;
-    border-radius: 10px;
-    padding: 42px;
-    width: 400px;
-    height: 490px;
-    margin: auto;
-    
-}
-.tituloC{
-    color: #efefef;
-    margin-top: 250px;
-    font-size: 50px;
-    font-family: 'Plus Jakarta Sans', sans-serif;
-}
-.main{
-    margin: 20px;
+.main {
+  margin: 20px;
 
 }
+
+/* CONTACTO Y TURNOS */
 
 .modifContenido h6 {
   margin-bottom: 30px;
   font-family: 'Plus Jakarta Sans', sans-serif;
   font-size: 1.4rem;
-  color: #efefef; }
+  color: #efefef;
+}
 
 .modifContenido label {
   font-family: 'Plus Jakarta Sans', sans-serif;
-  color: #cecece;}
-  
+  color: #cecece;
+}
+
 
 .modifCalendario {
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 #btnCalend {
-  margin-top: 10px; }
+  margin-top: 10px;
+}
 
-/* ESTILOS PARA EL MAPA EN LA PESTAÑA CONTACOS */
 .modifMapa {
-  margin: 60px 0 60px 0; }
+  margin: 60px 0 60px 0;
+}
 
-  .tituloPrincipal h6 {
-    margin: 300px 0 60px 0;
-    color: #efefef;
-    text-align: center;
-    font-family: 'Plus Jakarta Sans', sans-serif;
-    font-size: 3rem; }
+.tituloPrincipal h6 {
+  margin: 300px 0 60px 0;
+  color: #efefef;
+  text-align: center;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-size: 3rem;
+}
 
 
-    .tith6 {
-      margin-bottom: 30px;
-      font-family: 'Plus Jakarta Sans', sans-serif;
-      font-size: 1.4rem; }
-    
-    .containerDet {
-      width: 230px;
-      border: 5px solid #f591e8;
-      border-radius: 10px; }
-      .containerDet .divDetalle {
-        font-family: 'Plus Jakarta Sans', sans-serif;
-        color: #cecece;
-        font-size: 1.2rem;
-        border-bottom: 2px solid #f591e8;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center; }
-        .containerDet .divDetalle h6 {
-          
-          margin-top: 1rem;
-          font-size: 1.2rem; }
-    
-    .formReserva label {
-      font-family: 'Plus Jakarta Sans', sans-serif;
-      color: #cecece;
-    }
-    
-    .divPrincipalReserva {
-      color: #cecece;
-      margin-bottom: 60px; }
+.tith6 {
+  margin-bottom: 30px;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-size: 1.4rem;
+}
+
+.containerDet {
+  width: 230px;
+  border: 5px solid #f591e8;
+  border-radius: 10px;
+}
+
+.divDetalle {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  color: #cecece;
+  font-size: 1.2rem;
+  border-bottom: 2px solid #f591e8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.divDetalle h6 {
+
+  margin-top: 1rem;
+  font-size: 1.2rem;
+}
+
+.formReserva label {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  color: #cecece;
+}
+
+.divPrincipalReserva {
+  color: #cecece;
+  margin-bottom: 60px;
+}
